{
  "version": 4,
  "terraform_version": "0.14.5",
  "serial": 202,
  "lineage": "973cb8e7-0d10-8f1f-8aab-2a3128bafb0b",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "pubigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159415703522:internet-gateway/igw-0abb9412bbf3b1ed4",
            "id": "igw-0abb9412bbf3b1ed4",
            "owner_id": "159415703522",
            "tags": {
              "Name": "pubigw"
            },
            "vpc_id": "vpc-017acb82eab7c74ae"
          },
          "dependencies": [
            "aws_vpc.davpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "testigw",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159415703522:internet-gateway/igw-00d2c77140852e137",
            "id": "igw-00d2c77140852e137",
            "owner_id": "159415703522",
            "tags": {
              "Name": "testigw"
            },
            "vpc_id": "vpc-0e06e6bd78910c6bb"
          },
          "dependencies": [
            "aws_vpc.davpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "pubrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0445da77e5f6375d7",
            "owner_id": "159415703522",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "172.16.0.0/22",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-00587a5e5e3026eb4"
              }
            ],
            "tags": {
              "Name": "pubrt"
            },
            "vpc_id": "vpc-017acb82eab7c74ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.davpc",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "testrt",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtb-0f5941d42bb1fd636",
            "owner_id": "159415703522",
            "propagating_vgws": [],
            "route": [
              {
                "cidr_block": "10.251.244.0/22",
                "egress_only_gateway_id": "",
                "gateway_id": "",
                "instance_id": "",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": "pcx-00587a5e5e3026eb4"
              }
            ],
            "tags": {
              "Name": "testrt"
            },
            "vpc_id": "vpc-0e06e6bd78910c6bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.davpc2",
            "aws_vpc_peering_connection.peer"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "pubrtass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0ec80f421077357f5",
            "route_table_id": "rtb-0445da77e5f6375d7",
            "subnet_id": "subnet-066062625841fcc0b"
          },
          "dependencies": [
            "aws_route_table.pubrt",
            "aws_subnet.main",
            "aws_vpc.davpc",
            "aws_vpc.davpc2",
            "aws_vpc_peering_connection.peer",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0e83d2f85abe8e2d7",
            "route_table_id": "rtb-0445da77e5f6375d7",
            "subnet_id": "subnet-08d9b36c44703d684"
          },
          "dependencies": [
            "aws_route_table.pubrt",
            "aws_subnet.main",
            "aws_vpc.davpc",
            "aws_vpc.davpc2",
            "aws_vpc_peering_connection.peer",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "testrtass",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-07ae51a9c26523bff",
            "route_table_id": "rtb-0f5941d42bb1fd636",
            "subnet_id": "subnet-0097dabf8c9449d5d"
          },
          "dependencies": [
            "aws_route_table.testrt",
            "aws_subnet.main2",
            "aws_vpc.davpc",
            "aws_vpc.davpc2",
            "aws_vpc_peering_connection.peer",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-0bdb6c596fe562085",
            "route_table_id": "rtb-0f5941d42bb1fd636",
            "subnet_id": "subnet-0810083e7cd5ada29"
          },
          "dependencies": [
            "aws_route_table.testrt",
            "aws_subnet.main2",
            "aws_vpc.davpc",
            "aws_vpc.davpc2",
            "aws_vpc_peering_connection.peer",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sshsg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159415703522:security-group/sg-0baf5d702adaff43b",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-0baf5d702adaff43b",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "public VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "us-eas1-sg",
            "name_prefix": "",
            "owner_id": "159415703522",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "us-east1-sg"
            },
            "timeouts": null,
            "vpc_id": "vpc-017acb82eab7c74ae"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.davpc"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "sshsg1",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159415703522:security-group/sg-08bfc656512fdb9ea",
            "description": "Allow ssh inbound traffic",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-08bfc656512fdb9ea",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "public VPC",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              }
            ],
            "name": "us-eas1-sg1",
            "name_prefix": "",
            "owner_id": "159415703522",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "us-east1-sg2"
            },
            "timeouts": null,
            "vpc_id": "vpc-0e06e6bd78910c6bb"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.davpc2"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159415703522:subnet/subnet-066062625841fcc0b",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.251.244.0/24",
            "id": "subnet-066062625841fcc0b",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "159415703522",
            "tags": {
              "Name": "us-east-1a-pub"
            },
            "tags_all": {
              "Name": "us-east-1a-pub"
            },
            "vpc_id": "vpc-017acb82eab7c74ae"
          },
          "dependencies": [
            "aws_vpc.davpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159415703522:subnet/subnet-08d9b36c44703d684",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.251.245.0/24",
            "id": "subnet-08d9b36c44703d684",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "159415703522",
            "tags": {
              "Name": "us-east-1b-pub"
            },
            "tags_all": {
              "Name": "us-east-1b-pub"
            },
            "vpc_id": "vpc-017acb82eab7c74ae"
          },
          "dependencies": [
            "aws_vpc.davpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "main2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159415703522:subnet/subnet-0097dabf8c9449d5d",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "172.16.0.0/24",
            "id": "subnet-0097dabf8c9449d5d",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "159415703522",
            "tags": {
              "Name": "test-0"
            },
            "tags_all": {
              "Name": "test-0"
            },
            "vpc_id": "vpc-0e06e6bd78910c6bb"
          },
          "dependencies": [
            "aws_vpc.davpc2",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159415703522:subnet/subnet-0810083e7cd5ada29",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "172.16.1.0/24",
            "id": "subnet-0810083e7cd5ada29",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "159415703522",
            "tags": {
              "Name": "test-1"
            },
            "tags_all": {
              "Name": "test-1"
            },
            "vpc_id": "vpc-0e06e6bd78910c6bb"
          },
          "dependencies": [
            "aws_vpc.davpc2",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "privsub",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "index_key": 0,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159415703522:subnet/subnet-05f85d86a0e1ac2ce",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1a",
            "availability_zone_id": "use1-az6",
            "cidr_block": "10.251.246.0/24",
            "id": "subnet-05f85d86a0e1ac2ce",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "159415703522",
            "tags": {
              "Name": "us-east-1a-priv"
            },
            "tags_all": {
              "Name": "us-east-1a-priv"
            },
            "vpc_id": "vpc-017acb82eab7c74ae"
          },
          "dependencies": [
            "aws_vpc.davpc",
            "data.aws_availability_zones.azs"
          ]
        },
        {
          "index_key": 1,
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159415703522:subnet/subnet-00bc7e0c68e59223f",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "us-east-1b",
            "availability_zone_id": "use1-az1",
            "cidr_block": "10.251.247.0/24",
            "id": "subnet-00bc7e0c68e59223f",
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "159415703522",
            "tags": {
              "Name": "us-east-1b-priv"
            },
            "tags_all": {
              "Name": "us-east-1b-priv"
            },
            "vpc_id": "vpc-017acb82eab7c74ae"
          },
          "dependencies": [
            "aws_vpc.davpc",
            "data.aws_availability_zones.azs"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "davpc",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159415703522:vpc/vpc-017acb82eab7c74ae",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.251.244.0/22",
            "default_network_acl_id": "acl-0f6a409f56963d40a",
            "default_route_table_id": "rtb-0e865498a863c2a70",
            "default_security_group_id": "sg-001419489e928f3f1",
            "dhcp_options_id": "dopt-7491d90e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-017acb82eab7c74ae",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0e865498a863c2a70",
            "owner_id": "159415703522",
            "tags": {
              "Name": "datavpc"
            },
            "tags_all": {
              "Name": "datavpc"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "davpc2",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:us-east-1:159415703522:vpc/vpc-0e06e6bd78910c6bb",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "172.16.0.0/22",
            "default_network_acl_id": "acl-0e775d3b58ca69016",
            "default_route_table_id": "rtb-0d9843a956db4f93a",
            "default_security_group_id": "sg-0731ade2fd4089b8a",
            "dhcp_options_id": "dopt-7491d90e",
            "enable_classiclink": false,
            "enable_classiclink_dns_support": false,
            "enable_dns_hostnames": false,
            "enable_dns_support": true,
            "id": "vpc-0e06e6bd78910c6bb",
            "instance_tenancy": "default",
            "main_route_table_id": "rtb-0d9843a956db4f93a",
            "owner_id": "159415703522",
            "tags": {
              "Name": "datavpc2"
            },
            "tags_all": {
              "Name": "datavpc2"
            }
          }
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc_peering_connection",
      "name": "peer",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "accept_status": "active",
            "accepter": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "auto_accept": true,
            "id": "pcx-00587a5e5e3026eb4",
            "peer_owner_id": "159415703522",
            "peer_region": "us-east-1",
            "peer_vpc_id": "vpc-017acb82eab7c74ae",
            "requester": [
              {
                "allow_classic_link_to_remote_vpc": false,
                "allow_remote_vpc_dns_resolution": false,
                "allow_vpc_to_remote_classic_link": false
              }
            ],
            "tags": {
              "Name": "mypeering"
            },
            "vpc_id": "vpc-0e06e6bd78910c6bb"
          },
          "dependencies": [
            "aws_vpc.davpc",
            "aws_vpc.davpc2"
          ]
        }
      ]
    }
  ]
}